--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-filter": "~1.0.2",
     "gulp-flatten": "~0.0.4",
     "gulp-jshint": "~1.9.0",
+    "gulp-jscs": "~1.4.0",
     "gulp-load-plugins": "~0.7.1",
     "gulp-size": "~1.1.0",
     "gulp-uglify": "~1.0.1",
@@ -27,6 +28,7 @@
     "gulp-karma": "~0.0.4",
     "gulp-sass": "~1.1.0",
     "gulp-angular-filesort": "~1.0.4",
+    "gulp-docco": "~0.0.4",
     "main-bower-files": "~2.4.0",
     "jshint-stylish": "~1.0.0",
     "wiredep": "~2.2.0",
