--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-cookies": "~1.3.4",
     "angular-touch": "~1.3.4",
     "angular-sanitize": "~1.3.4",
+    "angular-material": "~0.8.1",
     "angular-resource": "~1.3.4",
     "angular-ui-router": "~0.2.13",
     "bootstrap-sass-official": "~3.3.1",
