--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,17 @@
     "angular-sanitize": "~1.3.4",
     "angular-resource": "~1.3.4",
     "angular-ui-router": "~0.2.13",
+    "angular-ui-ace": "~0.2.3",
     "bootstrap-sass-official": "~3.3.1",
-    "angular-bootstrap": "0.12.x",
+    "angular-material": "~0.9.0",
     "angular": "~1.3.4",
     "font-awesome": "~v4.3.0",
+
     "lodash": "~v3.5.0"
   },
+  "main": [
+ 	"bower_components/ace-builds/src-noconflict/ace.js" 
+  ],
   "devDependencies": {
     "angular-mocks": "~1.3.4"
   },
