--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "angular-ui-router": "~0.2.13",
     "angular-ui-ace": "~0.2.3",
     "angular-material": "~0.9.0",
-    "highcharts-release": "~v4.1.5",
+    "highcharts-release-standalone-all": "~4.0.3",
     "angular": "~1.3.4",
     "font-awesome": "~v4.3.0",
     "angular-messages": "~1.4.0",
